hphp/hack/test/typecheck/this_static_method.php.exp
File "this_static_method.php", line 10, characters 5-18:
  this as Foo
File "this_static_method.php", line 11, characters 12-21:
Invalid return type (Typing[4110])
File "this_static_method.php", line 7, characters 24-29:
Expected string
File "this_static_method.php", line 6, characters 31-33:
But got int
